--- a/HIV.html
+++ b/HIV.html
@@ -13,8 +13,8 @@
   	    
   	    <h1>Symptoms</h1>
 	    <ul>
-	        <li>persistent sadness</li>
-            <li>loss of interests</li></li>
+	        <li>swollen lymph glands</li>
+            <li>loss of interests</li>
             <li>decreased energy</li>
             <li>weight loss or gain</li>
             <li>thoughts of death</li>
