--- a/access.html
+++ b/access.html
@@ -29,7 +29,7 @@ body {font-family: "Lato", sans-serif;}
   text-align: center;
 }
 
-#FamilyMedicine {background-color:red;}
+#Obesity {background-color:red;}
 #WomensHealth {background-color:green;}
 #SubstanceHelp {background-color:blue;}
 #MentalHealth {background-color:orange;}
@@ -40,9 +40,9 @@ body {font-family: "Lato", sans-serif;}
 		<h1 style="text-align:center; padding: 40px">Charlotte Health Care</h1>
 	</div>
 
-<div id="Family Medicine" class="tabcontent">
-  <h1>Family Medicine</h1>
-  <p>Family Medicine.</p>
+<div id="Obesity" class="tabcontent">
+  <h1>Obesity</h1>
+  <p>Obesity.</p>
 </div>
 
 <div id="Womens Health" class="tabcontent">
@@ -60,7 +60,7 @@ body {font-family: "Lato", sans-serif;}
   <p>Mental Health.</p>
 </div>
 
-<button class="tablink" onclick="openTab('Family Medicine', this, 'red')" id="defaultOpen">Family Medicine</button>
+<button class="tablink" onclick="openTab('Obesity', this, 'red')" id="defaultOpen">Obesity</button>
 <button class="tablink" onclick="openTab('Womens Health', this, 'green')">Women's Health</button>
 <button class="tablink" onclick="openTab('Substance Help', this, 'blue')">Substance Help</button>
 <button class="tablink" onclick="openTab('Mental Health', this, 'orange')">Mental Health</button>
