--- a/depression.html
+++ b/depression.html
@@ -14,13 +14,12 @@
   	    <h1>Symptoms</h1>
 	    <ul>
 	        <li>persistent sadness</li>
-            <li>loss of interests</li></li>
+            <li>loss of interests</li>
             <li>decreased energy</li>
             <li>weight loss or gain</li>
             <li>thoughts of death</li>
         </ul>
-  	    
-  	    <br />
+
   	    
   	    <h1>Causes</h1>
 	    <ul>
