--- a/HIV.html
+++ b/HIV.html
@@ -8,7 +8,7 @@
     <body>
   	    <h1>Description</h1>
   	    <p>
-  	     
+  	     Human Immunodeficiency Virus (HIV) is so dangerous because it has no cure and weakens an individual's immune system. It can be controlled if found early, but many individuals miss this opportunity from a lack of education. It became incredibly associated with the gay community when it arose in the early 90's amongst the community.
   	    </p>
   	    
   	    <h1>Symptoms</h1>
