--- a/depression.html
+++ b/depression.html
@@ -8,7 +8,7 @@
     <body>
   	    <h1>Description</h1>
   	    <p>
-  	     
+  	     A common mood disorder that can have serious impacts on daily life. Waiting any longer than two weeks for help is not advized, since that is the minimum amount of time to be diagnosed. The most serious cases of depression have caused lots of grieving through suicides.
   	    </p>
   	    
   	    <h1>Symptoms</h1>
