--- a/buttons.html
+++ b/buttons.html
@@ -58,11 +58,11 @@ body {font-family: "Lato", sans-serif;}
   <h1>Charlotte Health Care</h1>
 </div>
 
-<button class="tablink" onclick="openTab('Home', this, '#33cccc')" id="defaultOpen"><a href = "home.html"></a>Home</button>
-<button class="tablink" onclick="openTab('Obesity', this, '#ff4d4d')" >Obesity</button>
-<button class="tablink" onclick="openTab('Access', this, '#00b300')">Access to Healthcare</button>
-<button class="tablink" onclick="openTab('HIV', this, '#c653c6')">HIV</button>
-<button class="tablink" onclick="openTab('MentalHealth', this, '#ffb84d')">Mental Health</button>
+<button class="tablink" onclick="openTab('Home', this, '#33cccc')" id="defaultOpen"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/home.html">Home</a></button>
+<button class="tablink" onclick="openTab('Obesity', this, '#ff4d4d')" ><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/obesity.html">Obesity</a></button>
+<button class="tablink" onclick="openTab('Access', this, '#00b300')"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/access.html">Access to Healthcare</a></button>
+<button class="tablink" onclick="openTab('HIV', this, '#c653c6')"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/HIV.html">HIV</a></button>
+<button class="tablink" onclick="openTab('MentalHealth', this, '#ffb84d')"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/depression.html">Mental Health</a></button>
 
 <script>
 function openTab(name,elmnt,color) {
@@ -87,3 +87,34 @@ document.getElementById("defaultOpen").click();
    
 </body>
 </html> 
+<html>
+	
+	<head>
+		<meta charset="UTF-8">
+		<title>title</title>
+  	</head>
+
+  	<body>
+		<div style = "Background-color: #009999; height: 100px; width: 1920px;">
+		<h1 style="text-align:center; padding: 40px">Charlotte Health Care</h1>
+
+  	<body bgcolor = "#d6f5f5"; overflow: scroll>
+		<div style = "Background-color: #33cccc; height: 100px; scroll-direction: horizontal;">
+		<h1 style="text-align:center; padding: 40px; scroll-direction: horizontal;">Charlotte Health Care</h1>
+
+		</div>
+		<div style = "Background-color: #d6f5f5; height: 10px; scroll-direction: horizontal;"></div>
+		<div style = "Background-color: #33cccc; height : 50px; scroll-direction: horizontal;"></div>
+		<div style = "Background-color: #d6f5f5; height: 10px; scroll-direction: horizontal;"></div>
+		<div style = "Background-color: #33cccc; height: 50px; scroll-direction: horizontal;">
+		<h2 style = "text-align:center; padding: 10px">Mission</h2></div>
+		<p style = "padding-left: 40px; padding-right: 40px">
+			Health issues continue to be a serious and often deadly problem in Charlotte, NC. 
+			Appropriate heath care options is not always available or accessible. 
+			Charlotte health care is here to assist you. Please navigate through any heath issue
+			you feel you might be struggling with and use the available resources
+			
+		</p>
+  		</div>
+  	</body>
+</html>
