--- a/home.html
+++ b/home.html
@@ -94,18 +94,9 @@ document.getElementById("defaultOpen").click();
 		<title>title</title>
   	</head>
 
-  	<body>
-		<div style = "Background-color: #009999; height: 100px; width: 1920px;">
-		<h1 style="text-align:center; padding: 40px">Charlotte Health Care</h1>
-
-  	<body bgcolor = "#d6f5f5"; overflow: scroll>
-		<div style = "Background-color: #33cccc; height: 100px; scroll-direction: horizontal;">
-		<h1 style="text-align:center; padding: 40px; scroll-direction: horizontal;">Charlotte Health Care</h1>
-
+  	<body bgcolor = "#d6f5f5";>
+		<div style = "Background-color: #d6f5f5; height: 60px; scroll-direction: horizontal;">
 		</div>
-		<div style = "Background-color: #d6f5f5; height: 10px; scroll-direction: horizontal;"></div>
-		<div style = "Background-color: #33cccc; height : 50px; scroll-direction: horizontal;"></div>
-		<div style = "Background-color: #d6f5f5; height: 10px; scroll-direction: horizontal;"></div>
 		<div style = "Background-color: #33cccc; height: 50px; scroll-direction: horizontal;">
 		<h2 style = "text-align:center; padding: 10px">Mission</h2></div>
 		<p style = "padding-left: 40px; padding-right: 40px">
