--- a/buttons.html
+++ b/buttons.html
@@ -14,7 +14,7 @@ body {font-family: "Lato", sans-serif;}
   cursor: pointer;
   padding: 14px 16px;
   font-size: 17px;
-  width: 20%;
+  width: 25%;
 }
 
 .tablink:hover {
@@ -30,7 +30,6 @@ body {font-family: "Lato", sans-serif;}
 
 #Home {background-color:#33cccc;}
 #Obesity {background-color:#ff4d4d;}
-#Access {background-color:#00b300;}
 #HIV {background-color:#c653c6;}
 #MentalHealth {background-color:#ffb84d;}
 </style>
@@ -46,10 +45,6 @@ body {font-family: "Lato", sans-serif;}
   <h1>Charlotte Health Care</h1>
 </div>
 
-<div id="Access" class="tabcontent">
-  <h1>Charlotte Health Care</h1>
-</div>
-
 <div id="HIV" class="tabcontent">
   <h1>Charlotte Health Care</h1>
 </div>
@@ -58,11 +53,10 @@ body {font-family: "Lato", sans-serif;}
   <h1>Charlotte Health Care</h1>
 </div>
 
-<button class="tablink" onclick="openTab('Home', this, '#33cccc')" id="defaultOpen"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/home.html">Home</a></button>
-<button class="tablink" onclick="openTab('Obesity', this, '#ff4d4d')" ><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/obesity.html">Obesity</a></button>
-<button class="tablink" onclick="openTab('Access', this, '#00b300')"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/access.html">Access to Healthcare</a></button>
-<button class="tablink" onclick="openTab('HIV', this, '#c653c6')"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/HIV.html">HIV</a></button>
-<button class="tablink" onclick="openTab('MentalHealth', this, '#ffb84d')"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/depression.html">Mental Health</a></button>
+<button class="tablink" onclick="openTab('Home', this, '#33cccc')" id="defaultOpen"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/home.html" style = "color:white">Home</a></button>
+<button class="tablink" onclick="openTab('Obesity', this, '#ff4d4d')" ><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/obesity.html" style = "color:white">Obesity</a></button>
+<button class="tablink" onclick="openTab('HIV', this, '#c653c6')"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/HIV.html" style = "color:white">HIV</a></button>
+<button class="tablink" onclick="openTab('MentalHealth', this, '#ffb84d')"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/depression.html" style = "color:white">Mental Health</a></button>
 
 <script>
 function openTab(name,elmnt,color) {
@@ -91,21 +85,12 @@ document.getElementById("defaultOpen").click();
 	
 	<head>
 		<meta charset="UTF-8">
-		<title>title</title>
+		<title>Charlotte Health Care</title>
   	</head>
 
-  	<body>
-		<div style = "Background-color: #009999; height: 100px; width: 1920px;">
-		<h1 style="text-align:center; padding: 40px">Charlotte Health Care</h1>
-
-  	<body bgcolor = "#d6f5f5"; overflow: scroll>
-		<div style = "Background-color: #33cccc; height: 100px; scroll-direction: horizontal;">
-		<h1 style="text-align:center; padding: 40px; scroll-direction: horizontal;">Charlotte Health Care</h1>
-
+  	<body bgcolor = "white";>
+		<div style = "Background-color: white; height: 60px; scroll-direction: horizontal;">
 		</div>
-		<div style = "Background-color: #d6f5f5; height: 10px; scroll-direction: horizontal;"></div>
-		<div style = "Background-color: #33cccc; height : 50px; scroll-direction: horizontal;"></div>
-		<div style = "Background-color: #d6f5f5; height: 10px; scroll-direction: horizontal;"></div>
 		<div style = "Background-color: #33cccc; height: 50px; scroll-direction: horizontal;">
 		<h2 style = "text-align:center; padding: 10px">Mission</h2></div>
 		<p style = "padding-left: 40px; padding-right: 40px">
