--- a/depression.html
+++ b/depression.html
@@ -14,7 +14,7 @@ body {font-family: "Lato", sans-serif;}
   cursor: pointer;
   padding: 14px 16px;
   font-size: 17px;
-  width: 20%;
+  width: 25%;
 }
 
 .tablink:hover {
@@ -30,7 +30,6 @@ body {font-family: "Lato", sans-serif;}
 
 #Home {background-color:#33cccc;}
 #Obesity {background-color:#ff4d4d;}
-#Access {background-color:#00b300;}
 #HIV {background-color:#c653c6;}
 #MentalHealth {background-color:#ffb84d;}
 </style>
@@ -46,10 +45,6 @@ body {font-family: "Lato", sans-serif;}
   <h1>Charlotte Health Care</h1>
 </div>
 
-<div id="Access" class="tabcontent">
-  <h1>Charlotte Health Care</h1>
-</div>
-
 <div id="HIV" class="tabcontent">
   <h1>Charlotte Health Care</h1>
 </div>
@@ -58,11 +53,10 @@ body {font-family: "Lato", sans-serif;}
   <h1>Charlotte Health Care</h1>
 </div>
 
-<button class="tablink" onclick="openTab('Home', this, '#33cccc')" <a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/home.html">Home</a></button>
-<button class="tablink" onclick="openTab('Obesity', this, '#ff4d4d')" ><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/obesity.html">Obesity</a></button>
-<button class="tablink" onclick="openTab('Access', this, '#00b300')"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/access.html">Access to Healthcare</a></button>
-<button class="tablink" onclick="openTab('HIV', this, '#c653c6')"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/HIV.html">HIV</a></button>
-<button class="tablink" onclick="openTab('MentalHealth', this, '#ffb84d')" id="defaultOpen"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/depression.html">Mental Health</a></button>
+<button class="tablink" onclick="openTab('Home', this, '#33cccc')" ><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/home.html" style = "color:white">Home</a></button>
+<button class="tablink" onclick="openTab('Obesity', this, '#ff4d4d')" ><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/obesity.html" style = "color:white">Obesity</a></button>
+<button class="tablink" onclick="openTab('HIV', this, '#c653c6')"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/HIV.html" style = "color:white">HIV</a></button>
+<button class="tablink" onclick="openTab('MentalHealth', this, '#ffb84d')" id="defaultOpen"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/depression.html" style = "color:white">Mental Health</a></button>
 
 <script>
 function openTab(name,elmnt,color) {
@@ -86,21 +80,25 @@ document.getElementById("defaultOpen").click();
 
    
 </body>
-</html> 
-
+</html>
 <html>
     <head>
         <meta charset="UTF-8">
         <title>Depression</title>
     </head>
     
-    <body>
-  	    <h1>Description</h1>
-  	    <p>
+    <body bgcolor = "white";>
+      <div style = "Background-color: white; height: 60px; scroll-direction: horizontal;">
+		</div>
+  	    <div style = "Background-color: #ffb84d; height: 50px; scroll-direction: horizontal;">
+		    <h2 style = "text-align:center; padding: 10px">Description</h2></div>
+  	    <p style = "padding-left: 40px; padding-right: 40px">
   	     A common mood disorder that can have serious impacts on daily life. Waiting any longer than two weeks for help is not advized, since that is the minimum amount of time to be diagnosed. The most serious cases of depression have caused lots of grieving through suicides.
-  	    </p>
   	    
-  	    <h1>Symptoms</h1>
+  	    <div style = "Background-color: white; height: 60px; scroll-direction: horizontal;">
+		</div>
+  	    <div style = "Background-color: #ffb84d; height: 50px; scroll-direction: horizontal;">
+		    <h2 style = "text-align:center; padding: 10px">Symptoms</h2></div>
 	    <ul>
 	        <li>persistent sadness</li>
             <li>loss of interests</li>
@@ -109,7 +107,10 @@ document.getElementById("defaultOpen").click();
             <li>thoughts of death</li>
         </ul>
 
-  	    <h1>Causes</h1>
+  	    <div style = "Background-color: white; height: 60px; scroll-direction: horizontal;">
+		</div>
+  	    <div style = "Background-color: #ffb84d; height: 50px; scroll-direction: horizontal;">
+		    <h2 style = "text-align:center; padding: 10px">Causes</h2></div>
 	    <ul>
 	        <li>brain imbalance</li>
             <li>poor nutrition</li>
@@ -117,5 +118,6 @@ document.getElementById("defaultOpen").click();
             <li>drug usage</li>
             <li>emotional stress</li>
         </ul>
+        </p>
 	</body>
 </html>
