Charlotte Help Care

--- a/HIV.html
+++ b/HIV.html
@@ -38,19 +38,19 @@ body {font-family: "Lato", sans-serif;}
   
 
 <div id="Home" class="tabcontent">
-    <h1>Charlotte Health Care</h1>
+    <h1>Charlotte Help Care</h1>
 </div>
   
 <div id="Obesity" class="tabcontent">
-  <h1>Charlotte Health Care</h1>
+  <h1>Charlotte Help Care</h1>
 </div>
 
 <div id="HIV" class="tabcontent">
-  <h1>Charlotte Health Care</h1>
+  <h1>Charlotte Help Care</h1>
 </div>
 
 <div id="MentalHealth" class="tabcontent">
-  <h1>Charlotte Health Care</h1>
+  <h1>Charlotte Help Care</h1>
 </div>
 
 <button class="tablink" onclick="openTab('Home', this, '#33cccc')" ><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/home.html" style = "color:white">Home</a></button>
