--- a/home.html
+++ b/home.html
@@ -38,19 +38,19 @@ body {font-family: "Lato", sans-serif;}
   
 
 <div id="Home" class="tabcontent">
-    <h1>Charlotte Health Care</h1>
+    <h1>Charlotte Help Care</h1>
 </div>
   
 <div id="Obesity" class="tabcontent">
-  <h1>Charlotte Health Care</h1>
+  <h1>Charlotte Help Care</h1>
 </div>
 
 <div id="HIV" class="tabcontent">
-  <h1>Charlotte Health Care</h1>
+  <h1>Charlotte Help Care</h1>
 </div>
 
 <div id="MentalHealth" class="tabcontent">
-  <h1>Charlotte Health Care</h1>
+  <h1>Charlotte Help Care</h1>
 </div>
 
 <button class="tablink" onclick="openTab('Home', this, '#33cccc')" id="defaultOpen"><a href = "https://vfs.cloud9.us-east-2.amazonaws.com/vfs/ef7e645097f449e8a65f7d872a4d3d3c/preview/hVckVth0n/hackathonCLT_RuntimeTerror/home.html" style = "color:white">Home</a></button>
@@ -85,7 +85,7 @@ document.getElementById("defaultOpen").click();
 	
 	<head>
 		<meta charset="UTF-8">
-		<title>Charlotte Health Care</title>
+		<title>Charlotte Help Care</title>
   	</head>
 
   	<body bgcolor = "white";>
@@ -96,7 +96,7 @@ document.getElementById("defaultOpen").click();
 		<p style = "padding-left: 40px; padding-right: 40px">
 			Health issues continue to be a serious and often deadly problem in Charlotte, NC. 
 			Appropriate heath care options is not always available or accessible. 
-			Charlotte health care is here to assist you. Please navigate through any heath issue
+			Charlotte Help Care is here to assist you. Please navigate through any heath issue
 			you feel you might be struggling with and use the available resources
 			
 		</p>
