--- a/home.html
+++ b/home.html
@@ -96,8 +96,8 @@ document.getElementById("defaultOpen").click();
 		<p style = "padding-left: 40px; padding-right: 40px">
 			Health issues continue to be a serious and often deadly problem in Charlotte, NC. 
 			Appropriate heath care options is not always available or accessible. 
-			Charlotte Help Care is here to assist you. Please navigate through any heath issue
-			you feel you might be struggling with and use the available resources
+			Charlotte Health Care is here to assist you. Please navigate through any heath issue
+			you feel you might be struggling with and use the available resources to seek any assistance available.
 			
 		</p>
   		</div>
